--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -81,7 +81,6 @@
       margin-top: 100px;
     }
 
-
   </style>
 </head>
 <body>
@@ -93,10 +92,10 @@
   </div>
   <nav class="col-8">
     <ul class="nav justify-content-end" style="margin-right: 50px">
-      <a class="nav-link" href="/neticket/login-page" style="color: black">로그인</a>
+      <a class="nav-link" href="/neticket/login" style="color: black">로그인</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/neticket/signup-page" style="color: black">회원가입</a>
+        <a class="nav-link" href="/neticket/signup" style="color: black">회원가입</a>
       </li>
     </ul>
   </nav>
@@ -115,8 +114,67 @@
       <a href="#" class="list-group-item list-group-item-action">뮤지컬</a>
     </div>
   </div>
-
+  <div class="card">
+    <h5 class="card-header">선택한 예매를 확인하세요.</h5>
+    <div class="card-body">
+      <h5 class="card-title">{modelData}.title</h5>
+      <p class="card-text">{modelData}.place</p>
+      <p class="card-text">{modelData}.price</p>
+      <select name="ticketCount" id="ticketCount">
+        <option value="1">1장</option>
+        <option value="2">2장</option>
+      </select>
+      <p class="card-text">{modelData.date}</p>
+      <a href="#" class="btn btn-primary" onclick="saveReservation()">예매하기</a>
+    </div>
+  </div>
 </div>
 </body>
+<script>
+  $(document).ready(function () {
+    // 여기에 작동시키고자 하는 함수를 작성합니다.
+    console.log("DOM이 로드되면 바로 실행되는 함수입니다.");
+  });
 
+  function getAuthTokenFromCookie() {
+    return document.cookie.split(';').find(
+        cookie => cookie.trim().startsWith('Authorization='))?.split('=')[1] || null;
+  }
+
+  function saveReservation() {
+
+    let token = getAuthTokenFromCookie(); // 쿠키에서 토큰 값 추출
+    console.log(token)
+
+    let eventId = 1;
+    let count = 1;
+
+    $.ajax({
+      type: "POST",
+      url: "/neticket/resv",
+      dataType: "json",
+      headers: {
+        'Content-Type': 'application/json',
+        'Authorization': token // Authorization 헤더에 토큰 값 추가
+      },
+      data: JSON.stringify({
+        ticketInfoId: eventId,
+        count: count
+      }),
+      success: function (response) {
+        if (response.success === "success") {
+          alert("예매가 완료되었습니다.");
+          window.location.href = "/neticket/reservations/completed/" + response.reservationId;
+        } else {
+          alert("예매가 실패했습니다.");
+        }
+      },
+      error: function (jqXHR, textStatus, errorThrown) {
+        // 요청이 실패한 경우, 처리할 코드를 작성합니다.
+        alert("요청이 실패하였습니다.");
+      }
+    })
+  }
+
+</script>
 </html>
