--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -33,76 +33,13 @@
 
 
   <title>NETicket 상세페이지</title>
-  <script>
-    // $(document).ready(function () {
-    //   // API 요청을 보내어 세부 정보를 받아옵니다.
-    //   $.ajax({
-    //     type: "GET",
-    //     url: "/neticket/detail",
-    //     success: function (data) {
-    //       const detailEventResponse = data.detailEventResponse;
-    //
-    //       // 세부 정보를 이용하여 UI를 업데이트합니다.
-    //       $('.image').attr('src', detailEventResponse.image);
-    //       $('h1').text(detailEventResponse.title);
-    //       $('.infoBtn').text(detailEventResponse.place);
-    //
-    //     },
-    //     error: function (jqXHR, textStatus, errorThrown) {
-    //       console.log(jqXHR);
-    //       console.log(textStatus);
-    //       console.log(errorThrown);
-    //     }
-    //   });
-    //
-    // });
-    //
-    // function onBookingButtonClick() {
-    //   const quantity = $('.infoItem:contains("매수") .infoText').text();
-    //   const selectedDate = $('#datePicker').val();
-    //   $.ajax({
-    //     type: 'POST',
-    //     url: '/neticket/booking',
-    //     data: {quantity, selectedDate},
-    //     success: function (response) {
-    //       window.location.href = '/neticket/mypage-page';
-    //     },
-    //     error: function (jqXHR, textStatus, errorThrown) {
-    //       console.log(jqXHR);
-    //       console.log(textStatus);
-    //       console.log(errorThrown);
-    //     }
-    //   });
-    // }
-    const detailEventResponse = {
-      title: '공연 제목',
-      place: '공연 장소',
-      price: 10000,
-      quantity: 2,
-      totalPrice: 20000
-    };
-
-    // HTML의 템플릿 변수에 값을 적용하여 동적으로 변경합니다.
-    const templateVars = [
-      {selector: '.info ul li:first-child .infoDesc', value: detailEventResponse.title},
-      {selector: '.info ul li:nth-child(2) .infoDesc', value: `<a class="infoBtn" data-popup="info-place" role="button" href="#">${detailEventResponse.place}</a>`},
-      {selector: '.info ul li:nth-child(3) .infoDesc p', value: `${detailEventResponse.price}원`},
-      {selector: '.info ul li:nth-child(4) .infoDesc p', value: `${detailEventResponse.quantity}매`},
-      {selector: '.info ul li:nth-child(5) .infoDesc p', value: `${detailEventResponse.totalPrice}원`}
-    ];
-
-    templateVars.forEach(({selector, value}) => {
-      document.querySelector(selector).innerHTML = value;
-    });
-
-  </script>
-
   <style>
     body {
       font-size: 1.4rem;
       font-weight: normal;
       font-family: -apple-system, system-ui, BlinkMacSystemFont, "맑은 고딕", "Malgun Gothic", "돋움", Dotum, Helvetica, "Apple SD Gothic Neo", sans-serif;
       color: #000;
+      height: 100%;
     }
 
     .productWrapper .summary .info {
@@ -127,17 +64,18 @@
     }
 
     .search-container input[type="text"] {
-      border-radius: 0px;
+      border: none;
+      border-radius: 5px;
+      margin-right: 10px;
       font-size: 16px;
       margin-bottom: 50px;
       width: 400px;
-      border-color: #007bff;
     }
 
     .search-container input[type="submit"] {
       padding: 10px;
       border: none;
-      border-radius: 0px;
+      border-radius: 5px;
       margin-bottom: 50px;
       background-color: #007bff;
       color: white;
@@ -147,14 +85,6 @@
 
     .image-container {
       margin-left: 50px;
-    }
-
-
-    .productWrapper .productSide .sideMain {
-      width: 33rem;
-      margin: 0 auto;
-      border: 0.1rem solid #b6bdc7;
-      border-radius: 1.5rem;
     }
 
     #bookingButton {
@@ -180,32 +110,23 @@
       display: inline;
     }
 
-    .info strong{
-      width: 100px;
+    .info strong {
+      width: 200px;
       display: inline-block;
     }
 
-    .info li{
+    .info li {
       margin-bottom: 12px;
     }
+
 
     .nav-link {
       font-size: 14px;
     }
 
     #bookingButton {
-      font-size: 16px;
-      width: 48%;
-    }
-
-    .footerContainer {
-      height: 80px;
-      font-size: 12px;
-      background-color: #eee;
-      display: flex;
-      align-content: center;
-      flex-wrap: wrap;
-      justify-content: center;
+      font-size: 15px;
+      width: 100%;
     }
 
     .footerContainer p {
@@ -213,36 +134,18 @@
       color: #999;
     }
 
-    .headerContainer {
-      width: 100%;
-      margin: 0;
-    }
-
-    .main {
-      display: flex;
-      max-width: 1100px;
-      margin: 0 auto;
-    }
-
-    .main .category {
-      width: 20%;
-      margin-right: 80px;
-    }
-
     .main .image-container {
       width: 50%;
       margin-right: 40px;
     }
 
-    .main .info {
-      width: 30%;
-    }
 
   </style>
 <body>
-<header class="row justify-content-between align-items-center py-2 headerContainer">
+<div class="row justify-content-between align-items-center py-2">
   <div class="col-4">
-    <h1 style="margin-top: 30px; margin-left: 70px"><a href="/neticket/events-page" style="text-decoration: none;color: black;">NETicket</a>
+    <h1 style="margin-top: 30px; margin-left: 70px"><a href="/neticket/events-page"
+                                                       style="text-decoration: none;color: black;">NETicket</a>
     </h1>
   </div>
   <nav class="col-8">
@@ -254,64 +157,121 @@
       </li>
     </ul>
   </nav>
-</header>
+</div>
 <form action="#" method="get" class="search-container">
   <input type="text" placeholder="검색">
   <input type="submit" value="검색">
 </form>
-<div style="display: flex;" class="main">
-  <div class="category">
+<div style="display: flex; margin-right: 20px" col-2>
+  <div style="margin-left: 50px; margin-top: 50px; margin-right: 20px" class="col-2">
     <p>Category</p>
-    <div class="list-group" style="width: 100%">
+    <div class="list-group" style="width: 100%; height: 100%">
       <a href="#" class="list-group-item list-group-item-action">공연</a>
       <a href="#" class="list-group-item list-group-item-action">영화</a>
       <a href="#" class="list-group-item list-group-item-action">연극</a>
       <a href="#" class="list-group-item list-group-item-action">뮤지컬</a>
     </div>
   </div>
-  <div class="image-container">
-    <img class="image" src="https://picsum.photos/600/650" alt="" width="100%" HEIGHT="70%">
+
+  <div class="image-container" style="margin-left: 150px; margin-top: 50px">
+    <img class="image"
+         src="" alt=""
+         width="100%" HEIGHT="70%">
   </div>
-  <ul class="info">
+
+  <ul class="info" style="margin-top: 100px; margin-left: 100px">
     <li class="infoItem"><strong class="infoLabel">제목</strong>
-      <div class="infoDesc">{{title}}</div>
+      <div class="infoDesc title"></div>
     </li>
     <li class="infoItem"><strong class="infoLabel">장소</strong>
-      <div class="infoDesc">
-        <a class="infoBtn" data-popup="info-place" role="button" href="#">{{place}}</a>
-      </div>
+      <div class="infoDesc place"></div>
     </li>
-    <li class="infoItem"><strong class="infoLabel">공연 가격</strong>
-      <div class="infoDesc"><p class="infoText">{{price}}원</p></div>
+    <li class="infoItem"><strong class="infoLabel">가격</strong>
+      <div class="infoDesc price"></div>
     </li>
-    <li class="infoItem"><strong class="infoLabel">매수</strong>
-      <div class="infoDesc"><p class="infoText">{{quantity}}매</p></div>
+    <li class="infoItem"><strong class="infoLabel">공연 날짜</strong>
+      <div class="infoDesc date"></div>
     </li>
-    <li class="infoItem infoPrice"><strong class="infoLabel">가격</strong>
-      <div class="infoDesc"><p class="infoText">{{totalPrice}}원</p></div>
+    <li class="infoItem"><strong class="infoLabel">예매 오픈 시각</strong>
+      <div class="infoDesc remainingTime1" id="">00:00:00</div>
     </li>
-    <li class="infoItem">
-      <div>
-        <label for="datePicker"><strong class="infoLabel">날짜 선택:</strong></label>
-        <input type="text" id="datePicker" placeholder="날짜 선택">
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-      <script>
-        flatpickr("#datePicker", {
-          dateFormat: "Y.m.d (D)",
-          disableMobile: true
-        });
-      </script>
+    <li class="infoItem"><strong class="infoLabel"></strong>
+      <div class="infoDesc remainingTime" id="timer" style="color: red; font-style: italic; font-size: 50px; display: flex; align-content: center; ">00:00:00</div>
     </li>
+
     <button id="bookingButton" onclick="onBookingButtonClick()">예매하기</button>
   </ul>
 </div>
-
-<footer>
-  <div class="footerContainer">
-    <p>Copyright ⓒ NETicket. All Rights Reserved.</p>
-  </div>
-</footer>
-
 </body>
+
+<script>
+  $(document).ready(function () {
+    // 이벤트 ID를 URL에서 가져옵니다.
+    const eventId = window.location.pathname.split('/').pop();
+
+    // 이벤트 세부 정보를 가져옵니다.
+    getEventDetails(eventId);
+
+    // 1초마다 남은 시간을 갱신하는 타이머를 시작합니다.
+    setInterval(updateRemainingTime, 1000);
+  });
+
+  function getEventDetails(eventId) {
+    $.ajax({
+      type: "GET",
+      url: "/neticket/events/" + eventId,
+      dataType: "json",
+      success: function (event) {
+        const imageUrl = 'https://gykimagebucket.s3.ap-northeast-2.amazonaws.com/uploaded-image/' + event.image;
+        $('.image').attr('src', imageUrl);
+        $('.title').text(event.title);
+        $('.place').text(event.place);
+        $('.price').text(addCommas(event.price) + '원');
+        $('.date').text(event.date);
+        $('.remainingTime1').text(event.ticketInfoDto.openDate);
+        // 이벤트의 티켓 정보를 저장합니다.
+        $('#bookingButton').data('ticketInfo', event.ticketInfoDto);
+        // 남은 시간을 표시합니다.
+        updateRemainingTime();
+      },
+      error: function (jqXHR, textStatus, errorThrown) {
+        console.error("AJAX request failed: " + textStatus + ", " + errorThrown);
+      }
+    });
+  }
+
+  function addCommas(number) {
+    return number.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+  }
+
+  function updateRemainingTime() {
+    // 예매 버튼에 저장된 티켓 정보를 가져옵니다.
+    const ticketInfo = $('#bookingButton').data('ticketInfo');
+    // 티켓 정보가 없으면 함수를 종료합니다.
+    if (!ticketInfo) {
+      return;
+    }
+    // 티켓 오픈 시간을 가져옵니다.
+    const openTime = new Date(ticketInfo.openDate);
+    // 현재 시간을 가져옵니다.
+    const now = new Date();
+    // 남은 시간을 계산합니다.
+    const remainingTime = openTime - now;
+    // 남은 시간이 음수이면 예매가 종료된 것으로 판단하고, 버튼을 비활성화합니다.
+    if (remainingTime < 0) {
+      $('#bookingButton').prop('disabled', true).text('예매 종료');
+      return;
+    }
+    // 시간, 분, 초를 계산합니다.
+    const hours = Math.floor(remainingTime / (1000 * 60 * 60));
+    const minutes = Math.floor((remainingTime % (1000 * 60 * 60)) / (1000 * 60));
+    const seconds = Math.floor((remainingTime % (1000 * 60)) / 1000);
+    // 타이머를 업데이트합니다.
+    const remainingTimeStr = `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+    $('.remainingTime').text(remainingTimeStr);
+  }
+
+
+</script>
+
 </html>
