--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -81,6 +81,26 @@
       margin-top: 100px;
     }
 
+    .infoDesc {
+      display: inline;
+    }
+
+    .infoText {
+      display: inline;
+    }
+
+    .info strong{
+      width: 100px;
+      display: inline-block;
+    }
+
+    .info li{
+      margin-bottom: 12px;
+    }
+
+    .nav-link {
+      font-size: 14px;
+    }
 
   </style>
 </head>
@@ -115,8 +135,77 @@
       <a href="#" class="list-group-item list-group-item-action">뮤지컬</a>
     </div>
   </div>
+  <div class="card" id="getresv">
 
+  </div>
 </div>
 </body>
+<script>
+  $(document).ready(function () {
+    showReservationCompleted();
+  });
 
+  function getAuthTokenFromCookie() {
+    return document.cookie.split(';').find(
+        cookie => cookie.trim().startsWith('Authorization='))?.split('=')[1] || null;
+  }
+
+  function showReservationCompleted() {
+
+    let token = getAuthTokenFromCookie(); // 쿠키에서 토큰 값 추출
+    console.log(token)
+
+    const pathArray = window.location.pathname.split('/');
+    const resvId = pathArray[pathArray.length - 1];
+    console.log(resvId);
+
+    $.ajax({
+      type : "GET",
+      url: "/neticket/resv/" + resvId,
+      dataType: "json",
+      headers: {
+        'Content-Type': 'application/json',
+        'Authorization': token // Authorization 헤더에 토큰 값 추가
+      },
+      success: function (response) {
+        console.log(response)
+        $('#getresv').empty(); // 이 부분을 추가
+        let id = response.id;
+        let title = response.title;
+        let place = response.place;
+        let date = response.date;
+        let totalPrice = response.totalPrice;
+        let count = response.count;
+
+        let temp = `<h5 class="card-header">예매완료</h5>
+                    <div class="card-body" id="getresv">
+                    <ul class="info">
+                      <li class="infoItem"><strong class="infoLabel">예매 번호 : </strong>
+                        <div class="infoDesc" id="resvId">${id}</div>
+                      </li>
+                      <li class="infoItem"><strong class="infoLabel">공연 제목 : </strong>
+                        <div class="infoDesc">${title}</div>
+                      </li>
+                      <li class="infoItem"><strong class="infoLabel">공연 장소 : </strong>
+                        <div class="infoDesc">
+                          <a class="infoBtn" data-popup="info-place" role="button" href="#">${place}</a>
+                        </div>
+                      </li>
+                      <li class="infoItem infoDate"><strong class="infoLabel">공연 날짜</strong>
+                        <div class="infoDesc"><p class="infoText">${date}</p></div>
+                      </li>
+                      <li class="infoItem infoPrice"><strong class="infoLabel">가격</strong>
+                        <div class="infoDesc"><p class="infoText">${totalPrice}원</p></div>
+                      </li>
+                      <li class="infoItem"><strong class="infoLabel">매수</strong>
+                        <div class="infoDesc"><p class="infoText">${count}매</p></div>
+                      </li>
+                    </ul>
+                  </div>`
+        $('#getresv').append(temp)
+      },
+    })
+  }
+
+</script>
 </html>
