--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -121,10 +121,10 @@
   </div>
   <nav class="col-8">
     <ul class="nav justify-content-end" style="margin-right: 50px">
-      <a class="nav-link" href="/neticket/login-page" style="color: black">로그인</a>
+      <a class="nav-link" href="/neticket/login" style="color: black">로그인</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/neticket/signup-page" style="color: black">회원가입</a>
+        <a class="nav-link" href="/neticket/signup" style="color: black">회원가입</a>
       </li>
     </ul>
   </nav>
