--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -81,6 +81,11 @@
       margin-top: 100px;
     }
 
+    .infoItem {
+      list-style: none;
+      font-size: 16px;
+    }
+
     .infoDesc {
       display: inline;
     }
@@ -89,14 +94,15 @@
       display: inline;
     }
 
-    .info strong{
-      width: 100px;
+    .info strong {
+      width: 200px;
       display: inline-block;
     }
 
-    .info li{
+    .info li {
       margin-bottom: 12px;
     }
+
 
     .nav-link {
       font-size: 14px;
@@ -191,13 +197,13 @@
                           <a class="infoBtn" data-popup="info-place" role="button" href="#">${place}</a>
                         </div>
                       </li>
-                      <li class="infoItem infoDate"><strong class="infoLabel">공연 날짜</strong>
+                      <li class="infoItem infoDate"><strong class="infoLabel">공연 날짜 : </strong>
                         <div class="infoDesc"><p class="infoText">${date}</p></div>
                       </li>
-                      <li class="infoItem infoPrice"><strong class="infoLabel">가격</strong>
-                        <div class="infoDesc"><p class="infoText">${totalPrice}원</p></div>
+                      <li class="infoItem infoPrice"><strong class="infoLabel">가격 : </strong>
+                        <div class="infoDesc"><p class="infoText">${totalPrice}원 : </p></div>
                       </li>
-                      <li class="infoItem"><strong class="infoLabel">매수</strong>
+                      <li class="infoItem"><strong class="infoLabel">매수 : </strong>
                         <div class="infoDesc"><p class="infoText">${count}매</p></div>
                       </li>
                     </ul>
