--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -88,19 +88,15 @@
         password: password
       }),
       success: function (response, status, xhr) {
-        if (response === 'success') {
-          // Authorization 헤더 값을 쿠키에 저장합니다.
-          document.cookie = 'Authorization=' + xhr.getResponseHeader('Authorization') + ';path=/';
-          // 로그인 성공 시, 이동할 페이지로 리다이렉트합니다.
-          window.location.href = "/neticket/events-page";
-        } else {
-          // 로그인 실패 시, 처리할 코드를 작성합니다.
-          alert("로그인에 실패하였습니다.");
-        }
+        alert("로그인 성공!")
+        // Authorization 헤더 값을 쿠키에 저장합니다.
+        document.cookie = 'Authorization=' + xhr.getResponseHeader('Authorization') + ';path=/';
+        // 로그인 성공 시, 이동할 페이지로 리다이렉트합니다.
+        window.location.href = "/neticket/events-page";
       },
       error: function (jqXHR, textStatus, errorThrown) {
         // 요청이 실패한 경우, 처리할 코드를 작성합니다.
-        alert("요청이 실패하였습니다.");
+        alert("로그인에 실패하였습니다.");
       }
     })
   }
