--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -131,6 +131,8 @@
     <select name="ticketCount" id="ticketCount">
       <option value="1">1장</option>
       <option value="2">2장</option>
+      <option value="3">3장</option>
+      <option value="4">4장</option>
     </select>
     <button id="bookingButton" onclick="saveReservation()">예매하기</button>
   </ul>
@@ -199,13 +201,9 @@
         ticketInfoId: ticketInfoId,
         count: selectedValue
       }),
-      success: function (response) {
-        if (response.success === "success") {
-          alert("예매가 완료되었습니다.");
-          window.location.href = "/neticket/reservations/completed/" + response.reservationId;
-        } else {
-          alert("예매가 실패했습니다.");
-        }
+      success: function (resvId) {
+        alert("예매가 완료되었습니다.");
+        window.location.href = "/neticket/reservations/completed/" + resvId;
       },
       error: function (jqXHR, textStatus, errorThrown) {
         // 요청이 실패한 경우, 처리할 코드를 작성합니다.
