--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -141,17 +141,11 @@
           // isAdmin: isAdmin
         }),
         success: function (data) {
-          console.log(data);
-          $("#alert-text").text("회원가입이 완료되었습니다.");
-          $("#alert").addClass("alert-success").removeClass("fade");
+          alert("회원가입이 완료되었습니다.");
           window.location.href = "/neticket/login";
         },
         error: function (jqXHR, textStatus, errorThrown) {
-          console.log(jqXHR);
-          console.log(textStatus);
-          console.log(errorThrown);
-          $("#alert-text").text("회원가입에 실패하였습니다.");
-          $("#alert").addClass("alert-danger").removeClass("fade");
+          alert("회원가입에 실패했습니다.")
         }
       });
     });
