--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -12,104 +12,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" th:href="@{/css/stylejang.css}">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css"
-        integrity="sha512-rn8d5WY6jz84r/OQuRU6vz8fUWlbjdpEsXAfX9HTyv2BPhq3ca/PAVKzO7c1KdQ3MqC4iN4A4XVxOxjE41oVtw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <!-- Bootstrap JavaScript -->
   <script
       src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js"
       integrity="sha512-1QqnHg9XeMx/d+lKg7Lw/AiJhMV97+Z2d3T3T4ARs4bs4VXbRjxjjpV7zY+ey6rGJB6BZv6NehUj+Mm6M9X6gQ=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="path/to/datepicker.css">
-  <script src="path/to/datepicker.js"></script>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+  <script type="text/javascript" th:src="@{/js/basic.js}"></script>
 
-
-  <meta charset="UTF-8">
   <title>예약완료 페이지</title>
-  <style>
 
-    body {
-      font-size: 1.4rem;
-      font-weight: normal;
-      font-family: -apple-system, system-ui, BlinkMacSystemFont, "맑은 고딕", "Malgun Gothic", "돋움", Dotum, Helvetica, "Apple SD Gothic Neo", sans-serif;
-      color: #000;
-      height: 100%;
-    }
-
-    .text-container h2 {
-      margin: 0 0 20px 0;
-    }
-
-    .text-container p {
-      line-height: 1.5;
-    }
-
-    .search-container {
-      display: flex;
-      justify-content: center;
-    }
-
-    .search-container input[type="text"] {
-      border: none;
-      border-radius: 5px;
-      margin-right: 10px;
-      font-size: 16px;
-      margin-bottom: 50px;
-      width: 400px;
-    }
-
-    .search-container input[type="submit"] {
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      margin-bottom: 50px;
-      background-color: #007bff;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    footer {
-      display: flex;
-      justify-content: center;
-      margin-top: 100px;
-    }
-
-    .infoItem {
-      list-style: none;
-      font-size: 16px;
-    }
-
-    .infoDesc {
-      display: inline;
-    }
-
-    .infoText {
-      display: inline;
-    }
-
-    .info strong {
-      width: 200px;
-      display: inline-block;
-    }
-
-    .info li {
-      margin-bottom: 12px;
-    }
-
-
-    .nav-link {
-      font-size: 14px;
-    }
-
-  </style>
 </head>
+
 <body>
 <div class="row justify-content-between align-items-center py-2">
   <div class="col-4">
@@ -146,72 +62,4 @@
   </div>
 </div>
 </body>
-<script>
-  $(document).ready(function () {
-    showReservationCompleted();
-  });
-
-  function getAuthTokenFromCookie() {
-    return document.cookie.split(';').find(
-        cookie => cookie.trim().startsWith('Authorization='))?.split('=')[1] || null;
-  }
-
-  function showReservationCompleted() {
-
-    let token = getAuthTokenFromCookie(); // 쿠키에서 토큰 값 추출
-    console.log(token)
-
-    const pathArray = window.location.pathname.split('/');
-    const resvId = pathArray[pathArray.length - 1];
-    console.log(resvId);
-
-    $.ajax({
-      type : "GET",
-      url: "/neticket/resv/" + resvId,
-      dataType: "json",
-      headers: {
-        'Content-Type': 'application/json',
-        'Authorization': token // Authorization 헤더에 토큰 값 추가
-      },
-      success: function (response) {
-        console.log(response)
-        $('#getresv').empty(); // 이 부분을 추가
-        let id = response.id;
-        let title = response.title;
-        let place = response.place;
-        let date = response.date;
-        let totalPrice = response.totalPrice;
-        let count = response.count;
-
-        let temp = `<h5 class="card-header">예매완료</h5>
-                    <div class="card-body" id="getresv">
-                    <ul class="info">
-                      <li class="infoItem"><strong class="infoLabel">예매 번호 : </strong>
-                        <div class="infoDesc" id="resvId">${id}</div>
-                      </li>
-                      <li class="infoItem"><strong class="infoLabel">공연 제목 : </strong>
-                        <div class="infoDesc">${title}</div>
-                      </li>
-                      <li class="infoItem"><strong class="infoLabel">공연 장소 : </strong>
-                        <div class="infoDesc">
-                          <a class="infoBtn" data-popup="info-place" role="button" href="#">${place}</a>
-                        </div>
-                      </li>
-                      <li class="infoItem infoDate"><strong class="infoLabel">공연 날짜 : </strong>
-                        <div class="infoDesc"><p class="infoText">${date}</p></div>
-                      </li>
-                      <li class="infoItem infoPrice"><strong class="infoLabel">가격 : </strong>
-                        <div class="infoDesc"><p class="infoText">${totalPrice}원 : </p></div>
-                      </li>
-                      <li class="infoItem"><strong class="infoLabel">매수 : </strong>
-                        <div class="infoDesc"><p class="infoText">${count}매</p></div>
-                      </li>
-                    </ul>
-                  </div>`
-        $('#getresv').append(temp)
-      },
-    })
-  }
-
-</script>
 </html>
