--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,14 +13,11 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" th:href="@{/css/stylejang.css}">
-  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+  <script type="text/javascript" th:src="@{/js/basic.js}"></script>
 
   <title>로그인 페이지</title>
   <style>
-    * {
-      font-family: 'Jua', sans-serif;
-    }
 
     #login-form {
       text-align: center;
@@ -65,41 +62,4 @@
   </button>
 </div>
 </body>
-<script>
-
-  function login() {
-    let useremail = $('#login_email').val();
-    let password = $('#login_password').val();
-
-    if (useremail == '') {
-      alert('ID를 입력해주세요');
-      return;
-    } else if (password == '') {
-      alert('비밀번호를 입력해주세요');
-      return;
-    }
-
-    $.ajax({
-      type: "POST",
-      url: '/neticket/login',
-      contentType: "application/json",
-      data: JSON.stringify({
-        email: useremail,
-        password: password
-      }),
-      success: function (response, status, xhr) {
-        alert("로그인 성공!")
-        // Authorization 헤더 값을 쿠키에 저장합니다.
-        document.cookie = 'Authorization=' + xhr.getResponseHeader('Authorization') + ';path=/';
-        // 로그인 성공 시, 이동할 페이지로 리다이렉트합니다.
-        window.location.href = "/neticket/events-page";
-      },
-      error: function (jqXHR, textStatus, errorThrown) {
-        // 요청이 실패한 경우, 처리할 코드를 작성합니다.
-        alert("로그인에 실패하였습니다.");
-      }
-    })
-  }
-
-</script>
 </html>
