--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -12,76 +12,18 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" th:href="@{/css/stylejang.css}">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css"
-        integrity="sha512-rn8d5WY6jz84r/OQuRU6vz8fUWlbjdpEsXAfX9HTyv2BPhq3ca/PAVKzO7c1KdQ3MqC4iN4A4XVxOxjE41oVtw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <!-- Bootstrap JavaScript -->
   <script
       src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js"
       integrity="sha512-1QqnHg9XeMx/d+lKg7Lw/AiJhMV97+Z2d3T3T4ARs4bs4VXbRjxjjpV7zY+ey6rGJB6BZv6NehUj+Mm6M9X6gQ=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="path/to/datepicker.css">
-  <script src="path/to/datepicker.js"></script>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+  <script type="text/javascript" th:src="@{/js/basic.js}"></script>
 
-
-  <meta charset="UTF-8">
   <title>예약중 페이지</title>
-  <style>
 
-    body {
-      font-size: 1.4rem;
-      font-weight: normal;
-      font-family: -apple-system, system-ui, BlinkMacSystemFont, "맑은 고딕", "Malgun Gothic", "돋움", Dotum, Helvetica, "Apple SD Gothic Neo", sans-serif;
-      color: #000;
-      height: 100%;
-    }
-
-    .text-container h2 {
-      margin: 0 0 20px 0;
-    }
-
-    .text-container p {
-      line-height: 1.5;
-    }
-
-    .search-container {
-      display: flex;
-      justify-content: center;
-    }
-
-    .search-container input[type="text"] {
-      border: none;
-      border-radius: 5px;
-      margin-right: 10px;
-      font-size: 16px;
-      margin-bottom: 50px;
-      width: 400px;
-    }
-
-    .search-container input[type="submit"] {
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      margin-bottom: 50px;
-      background-color: #007bff;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    footer {
-      display: flex;
-      justify-content: center;
-      margin-top: 100px;
-    }
-
-  </style>
 </head>
 <body>
 <div class="row justify-content-between align-items-center py-2">
@@ -138,79 +80,4 @@
   </ul>
 </div>
 </body>
-<script>
-  $(document).ready(function () {
-    getEventInfo();
-  });
-
-  function getEventInfo() {
-
-    const pathArray = window.location.pathname.split('/');
-    const ticketInfoId = pathArray[pathArray.length - 1];
-    console.log(ticketInfoId);
-
-    $.ajax({
-      type: "GET",
-      url: "/neticket/reservation/" + ticketInfoId,
-      dataType: "json",
-      success: function (event) {
-        $('.title').text(event.title);
-        $('.place').text(event.place);
-        $('.price').text(addCommas(event.price) + '원');
-        $('.date').text(event.date);
-      },
-      error: function (jqXHR, textStatus, errorThrown) {
-        console.error("AJAX request failed: " + textStatus + ", " + errorThrown);
-      }
-    });
-  }
-
-  function addCommas(number) {
-    return number.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-  }
-
-  function getAuthTokenFromCookie() {
-    return document.cookie.split(';').find(
-        cookie => cookie.trim().startsWith('Authorization='))?.split('=')[1] || null;
-  }
-
-  function saveReservation() {
-
-    let token = getAuthTokenFromCookie(); // 쿠키에서 토큰 값 추출
-    console.log(token)
-
-    // select 요소를 찾습니다.
-    let selectElement = document.getElementById('ticketCount');
-
-    // 선택된 option 요소의 value 값을 가져옵니다.
-    let selectedValue = selectElement.value;
-
-    const pathArray = window.location.pathname.split('/');
-    const ticketInfoId = pathArray[pathArray.length - 1];
-    console.log(ticketInfoId);
-
-    $.ajax({
-      type: "POST",
-      url: "/neticket/resv",
-      dataType: "json",
-      headers: {
-        'Content-Type': 'application/json',
-        'Authorization': token // Authorization 헤더에 토큰 값 추가
-      },
-      data: JSON.stringify({
-        ticketInfoId: ticketInfoId,
-        count: selectedValue
-      }),
-      success: function (resvId) {
-        alert("예매가 완료되었습니다.");
-        window.location.href = "/neticket/reservations/completed/" + resvId;
-      },
-      error: function (jqXHR, textStatus, errorThrown) {
-        // 요청이 실패한 경우, 처리할 코드를 작성합니다.
-        alert("요청이 실패하였습니다.");
-      }
-    })
-  }
-
-</script>
 </html>
