Reafactor : 엔드포인트 URL 수정
Restful한 엔드포인트 URL수정

Resolved : #15

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -27,7 +27,7 @@
 <body>
 <div class="row justify-content-between align-items-center py-2">
   <div class="col-4">
-    <h1 style="margin-top: 30px; margin-left: 70px"><a href="/neticket/events-page"
+    <h1 style="margin-top: 30px; margin-left: 70px"><a href="/neticket"
                                                        style="text-decoration: none;color: black;">NETicket</a>
     </h1>
   </div>
