feat : html $(document).ready(function () 이동
basic.js

Resolved : #15

--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -62,4 +62,9 @@
   </div>
 </div>
 </body>
+<script>
+  $(document).ready(function () {
+    showReservationCompleted();
+  });
+</script>
 </html>
