--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
 <body>
 <div class="row justify-content-between align-items-center py-2">
   <div class="col-4">
-    <h1 style="margin-top: 30px; margin-left: 70px"><a href="/neticket/events-page"
+    <h1 style="margin-top: 30px; margin-left: 70px"><a href="/neticket"
                                                        style="text-decoration: none;color: black;">NETicket</a>
     </h1>
   </div>
@@ -81,4 +81,14 @@
   </nav>
 </footer>
 </body>
+<script>
+  $(document).ready(function () {
+    showEvent(1);
+  });
+  $(document).on('click', '.col', function () {
+    let eventIdString = $(this).data('event-id');
+    let eventId = parseInt(eventIdString, 10);
+    window.location.href = "/neticket/events/" + eventId;
+  });
+</script>
 </html>
