Feat : 마이페이지 구현, 마이페이지 이동 버튼 구현
마이페이지 구현, 마이페이지 이동 버튼 구현

Resolves : #51

--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -35,6 +35,10 @@
   </div>
   <nav class="col-8">
     <ul class="nav justify-content-end" style="margin-right: 50px">
+      <li class="nav-item">
+        <a class="nav-link" href="/neticket/user" style="color: black">마이페이지</a>
+      </li>
+      <li class="nav-item">
       <a class="nav-link" href="/neticket/login" style="color: black">로그인</a>
       </li>
       <li class="nav-item">
